--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.h2.console.enabled=true
 server.port = 8090
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:sqlserver://109.226.61.11:1433;databaseName=Managment
+spring.datasource.username=shmuelstav
+spring.datasource.password=1qazaq1!
+
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
